--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-content>
     <ion-text color="primary">
-      <h1>PWA!!!!</h1>
+      <h1>PWA!!!</h1>
     </ion-text>
   </ion-content>
 </ion-app>
